--- a/src/site/_includes/default.njk
+++ b/src/site/_includes/default.njk
@@ -3,8 +3,8 @@ layout: base
 ---
 
 {# This is the standard layout that most pages will use. #}
-{% include 'partials/header-default.njk' %}
-{% include 'partials/navigation-drawer-default.njk' %}
+{# {% include 'partials/header-default.njk' %} #}
+{# {% include 'partials/navigation-drawer-default.njk' %} #}
 <main>
   <div id="content">
     {% if show_banner %}
@@ -13,4 +13,4 @@ layout: base
     {{ content | safe }}
   </div>
 </main>
-{% include 'partials/footer.njk' %}
+{# {% include 'partials/footer.njk' %} #}
